1.03
  - Mentioned git repository at github.com in POD

1.02
  - Added a Changes file

1.01
  - Made title configurable

1.00
  - Initial release
