@@ -1,5 +1,6 @@
 1.03
   - Mentioned git repository at github.com in POD
+  - Added vim syntax highlighting for source code view
 
 1.02
   - Added a Changes file
